# time-manager

./: .gitignore  README.md  TODO_ci.py  TODO_db.py  background.py  cli.py  collects.py  gui.py  main.py  net_mgr.py  selector.py  time_algh.py  time_str.py
Qt_GUI/: add_plot.py  add_plot.ui  add_plot2.py  add_task_gen.py  add_task_gen.ui  add_task_gen2.py  cluster.py  datetime_range.py  draw_backgroud_pil.py  gui.py  layout.py  layout.ui  pandasModel.py  plot2d.py  pyqtgraph_plot.py  selector.py  selector.ui  selector2.py  tabview.py
analyzers/: base_checker.py  face.py  face_check.py  mtcnn_face.py  value_check.py
checks/: base_checker.py  face_check.py  gen_sound.py
collectors/: camera.py  collect.py
commd_line/: TODO_ci.py  TODO_cli.py  init_config.py  test_time_input.py  time_input.py
data_collector/: auto_collect.py  chrome_history.py  collects.py  defaults.py  firefox_history.py  gitlog.py  linux_wtmp.py  save_to_db.py  sqlite_recovery.py  timer.py
data_collector/wtmp/: CMakeLists.txt  FSM.cpp  FSM.h  __init__.py  print.cpp  python_api.cpp  reader.cpp  reader.h  wtmp.py
data_process/: draw_callgraph.py  my_lib.py  my_str.py  test.py  time_str.py
my_libs/: argb.py  args.py  datetime_utils.py  default_job.py  dump_table.py  easy_api.py  my_process.py  sqltable.py  time_limit.py  timer.py
notifys/: base_notify.py  gen_sound.py  gnome.py
processes/: eyes_screen.py
recorders/: record.py  sqlite_face.py  video_recoder.py
smart_strptime/: Date_str.py  MTshort.py  __init__.py  basetest.py  basetime.py  datetime_str.py  draw_callgraph.py  my_lib.py  (+9 more)
(+67 files in other folders)
